# tool

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  cliff.toml  index.html  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml  release.yml
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: layout.css
src/components/: AppNavigation.vue  AppSidebar.vue  CodePanel.vue  OutputPanel.vue  PanelCard.vue  SearchBar.vue  SettingItem.vue  SplitPanel.vue  ThemeMenu.vue  ToolActionBar.vue  ToolStatusBar.vue  UpdateEntryButton.vue  UpdateModal.vue
src/composables/: useAppTheme.ts  useAutoUpdater.ts  useMessage.ts  useUpdateModal.ts  useUpdateNotification.ts  useWindowDrag.ts
src/layouts/: AppShell.vue
src/pages/base64-codec/: index.vue
src/pages/case-converter/: index.vue
src/pages/date-calculator/: index.vue
src/pages/encoding-hub/: index.vue
src/pages/escape-tool/: index.vue
src/pages/hex-codec/: index.vue
src/pages/html-entity-codec/: index.vue
src/pages/json-formatter/: InputPanel.vue  InspectorPanel.vue  JsonFormatterView.vue  JsonTreePanel.vue  index.vue
src/pages/line-ops/: index.vue
src/pages/qrcode-tool/: index.vue
src/pages/regex-tester/: index.vue
src/pages/settings/: index.vue
src/plugins/: antdv.ts  vuetify.ts
src/tools/: registry.ts
src/types/: tool.ts
src/utils/: debounce.ts  icons.ts  platform.ts  storage.ts
(+43 files in other folders)
